<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.amador.mypersonalwords.views.LoginActivity"
    android:background="@color/colorPrimaryDark">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/relativeLogin"
        android:layout_marginTop="@dimen/top_img_login"
        >

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/logo_principal"
        android:layout_centerHorizontal="true"
        android:id="@+id/imvLogoLogin"


        />

    <android.support.design.widget.TextInputLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tinUser"
        android:layout_below="@+id/imvLogoLogin"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        app:errorTextAppearance="@color/letterRed"


        >

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hind_user"
            android:textStyle="bold"
            android:gravity="center"
            android:textColor="@color/letterWhrite"

            />



    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tinPwd"
        android:layout_below="@+id/tinUser"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        app:errorTextAppearance="@color/letterRed"
        >

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hind_pwd"
            android:textStyle="bold"
            android:gravity="center"
            android:inputType="textPassword"
            android:textColor="@color/letterWhrite"

            />

    </android.support.design.widget.TextInputLayout>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/chkRemenber"
        android:textStyle="bold"
        android:textColor="@color/letterWhrite"
        android:text="@string/text_remember_credentials"
        android:layout_below="@+id/tinPwd"
        android:layout_centerHorizontal="true"
        android:checked="true"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:text="@string/text_btn_login"
        android:textColor="@color/letterWhrite"
        android:layout_below="@+id/chkRemenber"
        android:layout_centerHorizontal="true"
        android:id="@+id/btnLogin"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        style="?android:attr/buttonBarButtonStyle"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:text="@string/text_btn_create_acount"
        android:textColor="@color/letterWhrite"
        android:layout_below="@+id/btnLogin"
        android:layout_centerHorizontal="true"
        android:id="@+id/btnCreateAcount"
        style="?android:attr/buttonBarButtonStyle"
        />

    </RelativeLayout>



</RelativeLayout>
