<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.amador.mypersonalwords.views.RegisterActivity"
    android:background="@color/colorPrimaryDark"
    >

    <RelativeLayout
        android:id="@+id/contentPanelRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/top_img_login"
        >

        <android.support.design.widget.TextInputLayout

            android:id="@+id/tinUserRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:errorTextAppearance="@color/letterRed"
            android:layout_centerHorizontal="true"

            >

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/hind_user"
                android:textColor="@color/letterWhrite"
                android:id="@+id/edtUserRegister"

                />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout

            android:id="@+id/tinPwdRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:errorTextAppearance="@color/letterRed"
            android:layout_below="@+id/tinUserRegister"
            android:layout_centerHorizontal="true"

            >

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/hind_pwd"
                android:textColor="@color/letterWhrite"
                android:id="@+id/edtPwRegister"

                />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout

            android:id="@+id/tinPwdRegisterRepeat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:errorTextAppearance="@color/letterRed"
            android:layout_below="@+id/tinPwdRegister"
            android:layout_centerHorizontal="true"

            >

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/hind_pwd_repeat"
                android:textColor="@color/letterWhrite"
                android:id="@+id/edtPwRegisterRepeat"

                />

        </android.support.design.widget.TextInputLayout>

    </RelativeLayout>



    <android.support.design.widget.FloatingActionButton
        android:id="@+id/floatBtnRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:src="@mipmap/ic_thumb_up_black_24dp"
        />

</RelativeLayout>
